# fats

./: .gitignore  README.md  pyproject.toml  railpack.json
.github/workflows/: build-and-push.yml
fats/: builder.py  main.py  network.py  proxy.py  runner.py  scheduler.py  schedules.py  secrets.py
fats/models/: project_config.py  secret.py  service_entry.py  service_number.py
fats/utils/: __init__.py  logger.py  run_command.py  sqlite.py
fatstacks/: PROVIDERS.md  generate_schema.py
fatstacks/schema/: action.py  app.py  form.py  item.py  layout_hints.py  surface.py
fatstacks/utils/: model.py
