[project]
name = "fats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "async-lru>=2.0.5",
    "httpx>=0.28.1",
    "hypercorn>=0.18.0",
    "quart>=0.20.0",
    "sqlalchemy>=2.0.45",
]
